// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell renders amount with provided field 1`] = `
<td
  className="Cell-cellAmount-5"
  title="demo 
15564.524
super
demo code 2016Q3"
>
  15,564.52
</td>
`;

exports[`Cell renders amount with provided field and unit 1`] = `
<td
  className="Cell-cellAmount-5"
  title="demo 
15564.524
super
demo code 2016Q3"
>
  15,564.52$
</td>
`;

exports[`Cell renders custom renderer for field 1`] = `
<td
  className="Cell-cellAmount-5"
  title="demo 
15564.524
super
demo code 2016Q3"
>
  demo renderer
</td>
`;

exports[`Cell renders custom renderer for self 1`] = `
<td
  className="Cell-cellCenter-7"
  title=""
>
  demo renderer
</td>
`;

exports[`Cell renders empty percentage with provided field 1`] = `
<td
  className="Cell-cellQuantity-4"
  title="emptyScore 

super
demo code 2016Q3"
>
  
</td>
`;

exports[`Cell renders percentage with provided field 1`] = `
<td
  className="Cell-cellQuantity-4"
  title="demo 
15564.524
super
demo code 2016Q3"
>
  <b>
    15564.52%
  </b>
</td>
`;

exports[`Cell renders percentage with provided field 2`] = `
<td
  className="Cell-cellQuantity-4"
  title="demo 
15564.524
super
demo code 2016Q3"
>
  <b>
    15564.52%
  </b>
</td>
`;

exports[`Cell renders percentage with provided field 3`] = `
<td
  className="Cell-cellQuantity-4"
  title="score 
33.333333333333336
super
demo code 2016Q3"
>
  33.33%
</td>
`;

exports[`Cell renders text from nested field with link 1`] = `
<td
  className="Cell-cellText-2"
  title=""
>
  <a
    className="Cell-customLink-6"
    href="https://google.com"
  >
    <b>
      super
    </b>
  </a>
</td>
`;

exports[`Cell renders text with self field 1`] = `
<td
  className="Cell-cellText-2"
  title=""
>
  demo text
</td>
`;

exports[`Cell renders title with self field 1`] = `
<td
  className="Cell-cellCenter-7"
  title=""
>
  demo title
</td>
`;

exports[`Cell renders undefined percentage with provided field 1`] = `
<td
  className="Cell-cellQuantity-4"
  title="undefinedScore 
undefined
super
demo code 2016Q3"
>
  
</td>
`;
